# bagel-cli

./: .autorc  .dockerignore  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  Dockerfile  Dockerfile.nightly  Dockerfile.nightly.dockerignore  LICENSE  README.md  dev_requirements.txt  entrypoint.sh  generate_dictionary_jsonschema.py  generate_graphdata_jsonschema.py  generate_nb_vocab_file.py  generate_neurobagel_example_jsonlds.sh  pyproject.toml  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: build_docker_nightly.yml  build_docker_on_release.yml  cd.yml  cff_validation.yml  ci.yaml  codeql-analysis.yml  codespell.yml  release.yaml  test.yml
bagel/: bids_table_model.py  bids_utils.py  cli.py  config.py  dataset_description_model.py  derivatives_utils.py  dictionary_models.py  file_utils.py  logger.py  mappings.py  models.py  pheno_utils.py  utility.py
bagel/local_vocab_backup/: processing_pipelines.json
bagel/tests/: conftest.py  test_cli_bids.py  test_cli_derivatives.py  test_cli_pheno.py  test_utility.py
bagel/tests/data/: README.md  example1.tsv  example10.json  example11.json  example12.json  example13.json  example14.json  example15.json  example16.json  example17.json  example17.tsv  example19.json  example19.tsv  example2.json  example2.tsv  example20.json  example20.tsv  example4.tsv  example5.json  example6.json  example7.json  example8.json  example8.tsv  example9.json  example9.tsv  example_invalid.json  example_invalid.tsv  example_invalid_json.json  example_iso88591.tsv  example_synthetic.json  example_synthetic.jsonld  example_synthetic.tsv  example_synthetic_pheno-bids.jsonld  proc_status_missing_sessions.tsv  proc_status_no_bids_sessions.tsv  proc_status_no_sessions.tsv  proc_status_synthetic.csv  proc_status_synthetic.tsv  proc_status_synthetic_incomplete.tsv  proc_status_unique_sessions.tsv  (+1 more)
bagel/utilities/: bids_utils.py  derivative_utils.py  file_utils.py  model_utils.py  pheno_utils.py  utility.py
bagelbids/: cli.py  dictionary_models.py  mappings.py  merge.py  models.py  pheno_utils.py  utility.py
bagelbids/tests/: conftest.py  test_cli.py  test_cli_add_bids.py  test_cli_bids.py  test_cli_pheno.py  test_merge.py  test_pheno.py  test_utility.py
bagelbids/tests/data/: README.md  example1.json  example2.json  example2.tsv  example3.tsv  example5.tsv  example6.json  example6.tsv  example7.tsv  example8.json
helper_scripts/: generate_neurobagel_example_jsonlds.sh
tests/: conftest.py  test_age_validation.py  test_cli_interface.py  test_dutil.py  test_futil.py  test_mutil.py  test_putil.py  test_utility.py  utils.py
tests/data/: README.md  bids_metadata_synthetic.tsv  example1.json  example10.json  example11.tsv  example12.json  example13.json  example14.json  example15.json  example16.json  example17.json  example18.json  example18.tsv  example19.json  example19.tsv  example2.csv  example2.json  example20.json  example20.tsv  example21.json  example21.tsv  example22.json  example22.tsv  example23.json  example23.tsv  example23_harmonized.tsv  example24.json  example24.tsv  example24_dataset_description.json  example3.json  example4.json  example5.json  example6.json  example6.tsv  example7.json  example7.tsv  example8.json  example9.json  example_invalid.json  example_invalid_json.json  (+10 more)
tests/integration/: test_bids2tsv.py  test_cli_bids.py  test_cli_derivatives.py  test_cli_pheno.py  test_pheno_tsv.py
tests/unit/: test_bids_utils.py  test_butil.py  test_derivative_utils.py  test_dutil.py  test_file_utils.py  test_logging.py  test_mappings.py  test_model_utils.py  test_mutil.py  test_pheno_utils.py  test_schema.py
