[build-system]
build-backend = "hatchling.build"
requires = ["hatch-vcs", "hatchling"]

[project]
name = "bagel"
dynamic = ["version"]
license = { file = "LICENSE" }
authors = [{ name = "Neurobagel Developers" }]
maintainers = [{ name = "Sebastian Urchs", email = "sebastian.urchs@mcgill.ca" }]
description = "Automatic parsing of subjects' tabular data and imaging metadata into Neurobagel graph-compatible JSONLD files."
readme = "README.md"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.10"
dependencies = [
  "pybids",
  "typer",
  "rich",
  "pydantic>=2,<3",
  "jsonschema",
  "isodate",
  "httpx",
  "bids2table<2.1.1",
  "pandera[pandas]"
]

[project.optional-dependencies]
test = [
  "pytest",
  "coverage",
]
dev = ["bagel[test]", "pre-commit"]

[project.scripts]
bagel = "bagel.cli:bagel"

[tool.hatch.build.targets.wheel]
packages = ["bagel"]
include = [
  "bagel/pipeline-catalog/**/*",
  "bagel/communities/**/*",
]

[tool.hatch.build.targets.sdist]
exclude = ["tests/**"]  # omit deeply nested test data from the source tarball

[tool.hatch.version]
source = "vcs"  # use git tags to automatically determine the project version using hatch-vcs

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"  # do not append local version info to the version string to avoid PyPI upload errors

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
filter_files = true
line_length = 79

[tool.mypy]
ignore_missing_imports = true
no_warn_no_return = true
warn_redundant_casts = true
show_error_codes = true
pretty = true
