[metadata]
license = MIT
license_files = LICENSE
author = neurobagel developers
author_email = sebastian.urchs@mcgill.ca
maintainer = Sebastian Urchs
maintainer_email = sebastian.urchs@mcgill.ca
description = Automatic parsing of BIDS datasets into neurobagel graph compatible jsonld files.
description-file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >= 3.9
install_requires =
    pybids
include_package_data = False

[options.extras_require]
tests =
    flake8
    flake8-black
    flake8-isort


[flake8]
exclude =
    .git,
    __pycache__,
    docs/,
    build,
    dist
max-line-length = 99
docstring-convention = numpy