[metadata]
license = MIT
license_files = LICENSE
author = neurobagel developers
author_email = sebastian.urchs@mcgill.ca
maintainer = Sebastian Urchs
maintainer_email = sebastian.urchs@mcgill.ca
description = Automatic parsing of BIDS datasets into neurobagel graph compatible jsonld files.
description-file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >= 3.9
install_requires =
    pybids
    typer
    rich
    pydantic<2
    jsonschema
    isodate
zip_safe = False
packages = find:
include_package_data = True

[options.extras_require]
dev =
    flake8
    flake8-black
    pre-commit
    pip-tools

test =
    %(dev)s
    pytest
    coverage

all =
    %(test)s

[options.entry_points]
console_scripts =
    bagel=bagel.cli:bagel

[flake8]
exclude =
    .git,
    __pycache__,
    docs/,
    build,
    dist
extend-ignore = 
    E501, 
    E203
extend-select = B950
docstring-convention = numpy